--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,12 +1,12 @@
-<p>child works!</p>
-<p>Today's item: {{item}}</p>
+<!-- <p>child works!</p>
+<p>Today's item: {{item}}</p> -->
 
 <!-- <label>text box: </label>&nbsp;
 <input type="text" [(ngModel)]="box"><br>
 <label>{{ box }}</label><br>
 <button type="button" class="btn btn-primary" [disabled] = "!box">reset</button><br> -->
-
-<label>Add an item: <input #newItem></label>
-<button (click)="addNewItem(newItem.value)" class="btn btn-primary" >Add item</button>
+<!-- 
+<label>Add an item: <input #newItem></label> -->
+<!-- <button (click)="addNewItem(newItem.value)" class="btn btn-primary" >Add item</button> -->
 
 
