--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,21 @@
 <label>{{ box }}</label><br>
 <button type="button" class="btn btn-primary" [disabled] = "!box">reset</button><br> -->
 
-<ul>
+<!-- <ul>
   <li *ngFor="let item of items">{{item}}</li>
 </ul>
 
-<app-child [item]="title" (newItemEvent)='addItem($event)'></app-child>
+<app-child [item]="title" (newItemEvent)='addItem($event)'></app-child> -->
+
+<button class="btn btn-primary" (click) = "show()" >{{ clickText }}</button>
+<p appHighlightDirective *ngIf = "clickNum == 1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores dolorem illum officia accusantium, repellat itaque eius ab ullam mollitia aspernatur maiores, dolore quas enim voluptate vitae minima! Quisquam, id magni!</p>
+
+<!-- <ul>
+  <li *ngIf = "clickNum == 1">{{today | date:'medium' }}</li>
+</ul> -->
+<!-- <p> {{ toggles}}</p> -->
+
+<ul *ngFor="let toggle of toggles; let i=index" [ngStyle]="{'background-color': i >=5 ? 'blue' : 'white', 'color': i >=5 ? 'white' : 'blak', 'list-style-type': 'none'}">
+  <li>{{i+1}}. toggle on {{toggle | date:'medium' }}</li>
+</ul>
+<!-- <h1 appHighlightDirective>Highlight Me !</h1> -->
