--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,28 @@
 <app-child [item]="title" (newItemEvent)='addItem($event)'></app-child> -->
 
 <button class="btn btn-primary" (click) = "show()" >{{ clickText }}</button>
-<p appHighlightDirective *ngIf = "clickNum == 1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores dolorem illum officia accusantium, repellat itaque eius ab ullam mollitia aspernatur maiores, dolore quas enim voluptate vitae minima! Quisquam, id magni!</p>
+<p *ngIf = "clickNum == 1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores dolorem illum officia accusantium, repellat itaque eius ab ullam mollitia aspernatur maiores, dolore quas enim voluptate vitae minima! Quisquam, id magni!</p>
 
 <!-- <ul>
   <li *ngIf = "clickNum == 1">{{today | date:'medium' }}</li>
 </ul> -->
 <!-- <p> {{ toggles}}</p> -->
 
-<ul *ngFor="let toggle of toggles; let i=index" [ngStyle]="{'background-color': i >=5 ? 'blue' : 'white', 'color': i >=5 ? 'white' : 'blak', 'list-style-type': 'none'}">
+<!-- <ul *ngFor="let toggle of toggles; let i=index" [ngStyle]="{'background-color': i >=5 ? 'blue' : 'white', 'color': i >=5 ? 'white' : 'blak', 'list-style-type': 'none'}">
   <li>{{i+1}}. toggle on {{toggle | date:'medium' }}</li>
-</ul>
+</ul> -->
 <!-- <h1 appHighlightDirective>Highlight Me !</h1> -->
+
+<div class="scrollClass" id="scrollClass" appHighlightDirective >
+  <table style="width:100%">
+    <tr>
+      <th>comment</th>
+      <th>date</th>
+    </tr>
+    <tr *ngFor="let toggle of toggles; let i=index"
+    [ngStyle]="{'background-color': i >=5 ? 'blue' : 'white', 'color': i >=5 ? 'white' : 'blak', 'list-style-type': 'none'}">
+      <td>{{i+1}}. toggle on </td>
+      <td>{{toggle | date:'medium' }}</td>
+    </tr>
+  </table>
+</div>
